--- a/index.html
+++ b/index.html
@@ -351,7 +351,46 @@
 
 <p id="text-instagram"> Ne soyez pas timides et suivez-moi sur Instagram :)</p>
 
-<script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/4840b153c659505dba2fda67b53d8247.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-3">
+            <div class="overlay-container">
+                <a href="https://www.instagram.com/p/BacJLpbBUJ0" target="_blank">
+                    <img src="Images/instagram-post-3.png" alt="Innisfree Camellia Essential Hair Mask Pack (repair)" class="img-fluid">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="overlay-container">
+                <a href="https://www.instagram.com/p/BaHSI_xBkNv" target="_blank">
+                    <img src="Images/instagram-post-4.png" alt="Haul from Tokyo and Seoul" class="img-fluid">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="overlay-container">
+                <a href="https://www.instagram.com/p/BZjg5ethIz6" target="_blank">
+                    <img src="Images/instagram-post-5.png" alt="Masks" class="img-fluid">
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="overlay-container">
+                <a href="https://www.instagram.com/p/BXQhOH2hWBt" target="_blank">
+                    <img src="Images/instagram-post-6-1.png" alt="Rituals" class="img-fluid">
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>  
+<br>
 
 
 <!-- Inscription à la newsletter -->
